--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,8 @@
 <body>
   <app-root></app-root>
 </body>
+
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </html>
